# Proyecto-codecoach

./: CMakeLists.txt
Motor de evaluaciones/: CMakeLists.txt  Dockerfile  prueba_motor.json
Motor de evaluaciones/include/: EjecutadorCodigo.h  SandboxEjecucion.h
Motor de evaluaciones/src/: EjecutadorCodigo.cpp  MotorEvaluacion.cpp  SandboxEjecucion.cpp  main.cpp
client/: CMakeLists.txt
client/src/: AdminWindow.cpp  AdminWindow.h  HttpClient.h  MainWindow.cpp  MainWindow.h  ProblemModel.h  ProblemService.cpp  ProblemService.h  analizadorsoluciones.cpp  analizadorsoluciones.h  main.cpp
client/ui/: adminwindow.ui  mainwindow.ui
codecoach_api/: package-lock.json  package.json  server.js
codecoach_api/models/: Problem.js
codecoach_api/routes/: problems.js
include/: EjecutadorCodigo.h  MotorEvaluacion.h  SandboxEjecucion.h
src/: MotorEvaluacion.cpp  main.cpp
